--- a/app/views/station/edit.erb
+++ b/app/views/station/edit.erb
@@ -1,5 +1,5 @@
 <form action="/stations/<%= @station.id %>" method="post">
-  <h1>Editasdfasdfasdf</h1>
+  <h1>Edit</h1>
   <input type="hidden" name="_method" value="PUT" />
   <p>Name: <input type='text' name='station[name]' value="<%= @station.name %>"/></p>
   <p>Dock Count: <input type='integer' name='station[dock_count]' value="<%= @station.dock_count %>"/></p>
