--- a/app/public/dashboard.css
+++ b/app/public/dashboard.css
@@ -1,8 +1,8 @@
 
 body {
   background-image: url('/images/dash-bike.jpg');
-  background-size: 100%;
-  opacity: 0.6;
+  background-size: cover;
+  opacity: 0.8;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
