--- a/app/public/index.css
+++ b/app/public/index.css
@@ -84,6 +84,7 @@ a {
   font-size: 16px;
   border: none;
   cursor: pointer;
+  margin-left: 89px;
 }
 
 .dropdown {
@@ -94,8 +95,9 @@ a {
 }
 
 .dropdown-content {
-  display: none;
   position: absolute;
+  margin-right: 72px;
+  display: none;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -103,6 +105,7 @@ a {
 }
 
 .dropdown-content a {
+  text-align: end;
   color: grey;
   padding: 12px 16px;
   text-decoration: none;
