--- a/app/public/new.css
+++ b/app/public/new.css
@@ -25,6 +25,7 @@ body {
   font-size: 16px;
   border: none;
   cursor: pointer;
+  margin-left: 89px;
 }
 
 .dropdown {
@@ -35,8 +36,9 @@ body {
 }
 
 .dropdown-content {
-  display: none;
   position: absolute;
+  margin-right: 72px;
+  display: none;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -44,6 +46,7 @@ body {
 }
 
 .dropdown-content a {
+  text-align: end;
   color: grey;
   padding: 12px 16px;
   text-decoration: none;
@@ -65,6 +68,26 @@ body {
 }
 
 input[type=float], select {
+  width: 188px;
+  padding: 16px;
+  margin: -1px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=text], select {
+  width: 188px;
+  padding: 16px;
+  margin: -1px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=integer], select {
   width: 188px;
   padding: 16px;
   margin: -1px 0;
@@ -101,6 +124,7 @@ p {
 }
 
 .button {
+  margin-top: 17px;
   background-color: #262626;
   border-radius: 4px;
   border: none;
