styling for new station page

--- a/app/views/station/new.erb
+++ b/app/views/station/new.erb
@@ -19,10 +19,10 @@
 
     <form action="/stations" method="post">
       <div class = "input-forms">
-        <p>Name: <input type='text' name='station[name]'/></p>
-        <p>Dock Count: <input type='integer' name='station[dock_count]'/></p>
-        <p>City: <input type='text' name='station[city]'/></p>
-        <p>Installation Date: <input type='date' name='station[installation_date]'/></p>
+        <p><input type='text' name='station[name]' placeholder="Name"/></p>
+        <p><input type='integer' name='station[dock_count]' placeholder="Dock Count"/></p>
+        <p><input type='text' name='station[city]' placeholder="City"/></p>
+        <p><input type='date' name='station[installation_date]'/></p>
         </div>
         <div class = "create-button">
           <p><input class = "button" type='submit' value='Create'/></p>
