--- a/app/public/dashboard.css
+++ b/app/public/dashboard.css
@@ -1,7 +1,7 @@
-
 body {
   background-image: url('/images/dash-bike.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
   opacity: 0.8;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
