--- a/app/public/new.css
+++ b/app/public/new.css
@@ -13,7 +13,7 @@ body {
 }
 
 .firstline-title {
-  margin-left: 41px;
+  margin-left: 60px;
 }
 
 .dropbtn {
@@ -127,7 +127,9 @@ p {
   margin-top: 17px;
   background-color: #262626;
   border-radius: 4px;
-  border: none;
+  border: solid;
+  border-color: lightgrey;
+  border-width: 1px;
   color: white;
   padding: 15px 32px;
   text-align: center;
