Add additional nav

--- a/app/views/condition/new.erb
+++ b/app/views/condition/new.erb
@@ -11,7 +11,8 @@
       <div class="dropdown">
         <button class="dropbtn">More</button>
         <div class="dropdown-content">
-          <a href="/">Dashboard</a>
+          <a href="/">Home</a>
+          <a href="/weather-dashboard">Dashboard</a>
           <a href="/conditions">Conditions</a>
         </div>
       </div>
