--- a/app/views/trip/new.erb
+++ b/app/views/trip/new.erb
@@ -2,7 +2,8 @@
 
 
 <nav>
-  <a href="/">Dashboard</a>
+  <a href="/">Home</a>
+  <a href="/trips-dashboard">Dashboard</a>
   <a href="/trips">All Trips</a>
 </nav>
 
