--- a/app/views/trip/new.erb
+++ b/app/views/trip/new.erb
@@ -1,20 +1,35 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel = "stylesheet" type = "text/css" href = "/new.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+  </head>
 
+  <body>
+    <div class = "firstline">
+      <h1 class = "firstline-title">New Trip</h1>
+      <div class="dropdown">
+        <button class="dropbtn">More</button>
+        <div class="dropdown-content">
+          <a href="/">Home</a>
+          <a href="/trips-dashboard">Dashboard</a>
+          <a href="/trips">Trips</a>
+        </div>
+      </div>
+    </div>
 
-
-<nav>
-  <a href="/">Home</a>
-  <a href="/trips-dashboard">Dashboard</a>
-  <a href="/trips">All Trips</a>
-</nav>
-
-<form action="/trips" method="post">
-  <h1>Enter Trip Information</h1>
-  <p>Start Date: <input type='date' name='trip[start_date]'/></p>
-  <p>End Date: <input type='date' name='trip[end_date]'/></p>
-  <p>Duration(seconds): <input type='integer' name='trip[duration]'/></p>
-  <p>Start Station: <input type='text' name='trip[start_station_name]'/></p>
-  <p>End Station: <input type='text' name='trip[end_station_name]'/></p>
-  <p>Bike ID: <input type='text' name='trip[bike_id]'/></p>
-  <p>Subscription Type: <input type='text' name='trip[subscription_type]'/></p>
-  <p><input type='submit'/></p>
-</form>
+    <form action="/trips" method="post">
+      <div class = "input-forms">
+        <p><input type='date' name='trip[start_date]'/> - <input type='date' name='trip[end_date]'/></p>
+        <p><input type='integer' name='trip[duration]' placeholder="Duration(seconds)"/></p>
+        <p><input type='text' name='trip[start_station_name]' placeholder="Start Station"/></p>
+        <p><input type='text' name='trip[end_station_name]' placeholder="End Station"/></p>
+        <p><input type='text' name='trip[bike_id]' placeholder="Bike ID"/></p>
+        <p><input type='text' name='trip[subscription_type]' placeholder="Subscription Type"/></p>
+      </div>
+      <div class = "create-button">
+        <p><input class = "button" type='submit' value="Create"/></p>
+      </div>
+    </form>
+  </body>
+</html>
