--- a/app/views/condition/new.erb
+++ b/app/views/condition/new.erb
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
   </head>
 
-  <body>
+  <body class = "new-page">
     <div class = "firstline">
       <h1 class = "firstline-title">New Condition</h1>
       <div class="dropdown">
