--- a/app/views/trip/edit.erb
+++ b/app/views/trip/edit.erb
@@ -1,6 +1,27 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel = "stylesheet" type = "text/css" href = "/new.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+  </head>
+
+  <body class = "edit-page">
+    <div class = "firstline">
+      <h1 class = "firstline-title">Edit Trip</h1>
+      <div class="dropdown">
+        <button class="dropbtn">More</button>
+        <div class="dropdown-content">
+          <a href="/">Home</a>
+          <a href="/trips-dashboard">Dashboard</a>
+          <a href="/trips">Trips</a>
+        </div>
+      </div>
+    </div>
+
 <form action="/trips/<%= @trip.id %>" method="post">
-  <h1>Edit</h1>
+  <div class = "input-forms"
   <input type="hidden" name="_method" value="PUT" />
+  
   <p>Dates: <input type='date' name='trip[start_date]' value="<%= @trip.start_date %>"/> to <input type='date' name='trip[end_date]' value="<%= @trip.end_date %>"/></p>
   <p>Duration(seconds): <input type='integer' name='trip[duration]' value="<%= @trip.duration %>"/></p>
   <p>Start Station Name: <input type='text' name='trip[start_station_name]' value="<%= @trip.start_station_name %>"/></p>
