--- a/app/views/trip/edit.erb
+++ b/app/views/trip/edit.erb
@@ -18,15 +18,25 @@
       </div>
     </div>
 
-<form action="/trips/<%= @trip.id %>" method="post">
-  <div class = "input-forms"
-  <input type="hidden" name="_method" value="PUT" />
-  
-  <p>Dates: <input type='date' name='trip[start_date]' value="<%= @trip.start_date %>"/> to <input type='date' name='trip[end_date]' value="<%= @trip.end_date %>"/></p>
-  <p>Duration(seconds): <input type='integer' name='trip[duration]' value="<%= @trip.duration %>"/></p>
-  <p>Start Station Name: <input type='text' name='trip[start_station_name]' value="<%= @trip.start_station_name %>"/></p>
-  <p>End Station Name: <input type='text' name='trip[end_station_name]' value="<%= @trip.end_station_name %>"/></p>
-  <p>Bike ID: <input type='integer' name='trip[bike_id]' value="<%= @trip.bike_id %>"/></p>
-  <p>Subscription: <input type='text' name='trip[subscription_type]' value="<%= @trip.subscription_type %>"/></p>
-  <p><input type='submit'/></p>
-</form>
+    <form action="/trips/<%= @trip.id %>" method="post">
+      <div class = "input-forms">
+        <input type="hidden" name="_method" value="PUT" />
+
+        <p><input type='date' name='trip[start_date]' value="<%= @trip.start_date %>"/> - <input type='date' name='trip[end_date]' value="<%= @trip.end_date %>"/></p>
+        <p class = "input-describe">Duration(seconds):</p>
+        <p><input type='integer' name='trip[duration]' value="<%= @trip.duration %>"/></p>
+        <p class = "input-describe">Start Station Name:</p>
+        <p><input type='text' name='trip[start_station_name]' value="<%= @trip.start_station_name %>"/></p>
+        <p class = "input-describe">End Station Name:</p>
+        <p><input type='text' name='trip[end_station_name]' value="<%= @trip.end_station_name %>"/></p>
+        <p class = "input-describe">Bike ID:</p>
+        <p><input type='integer' name='trip[bike_id]' value="<%= @trip.bike_id %>"/></p>
+        <p class = "input-describe">Subscription:</p>
+        <p><input type='text' name='trip[subscription_type]' value="<%= @trip.subscription_type %>"/></p>
+      </div>
+      <div class = "create-button">
+        <p><input class = "button" type='submit' value="Edit"/></p>
+      </div>
+    </form>
+  </body>
+</html>
