--- a/app/views/condition/show.erb
+++ b/app/views/condition/show.erb
@@ -1,20 +1,47 @@
-<a href="/conditions">All Conditions</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel = "stylesheet" type = "text/css" href = "/show.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+  </head>
 
-<h1><%= @condition.date %></h1>
+  <body>
+    <div class = "firstline">
+      <h1 class = "firstline-title"><%= @condition.date.strftime("%B %d, %Y") %></h1>
 
-<p>ID: <%= @condition.id %></p>
-<p>Temperature Range: <%= @condition.min_temperature_f %>-<%= @condition.max_temperature_f %> Degrees</p>
-<p>Mean Temperature: <%= @condition.mean_temperature_f %> Degrees</p>
-<p>Mean Humidity: <%= @condition.mean_humidity %> %</p>
-<p>Mean Visibility: <%= @condition.mean_visibility_miles %> Miles</p>
-<p>Mean Wind Speed: <%= @condition.mean_wind_speed_mph %> MPH</p>
-<p>Precipitation: <%= @condition.precipitation_inches %> Inches</p>
+      <div class="dropdown">
+        <button class="dropbtn">More</button>
+        <div class="dropdown-content">
+          <a href="/">Home</a>
+          <a href="/conditions">Conditions</a>
+          <a href="/conditions/new">New</a>
+          <a href="/weather-dashboard">Dashboard</a>
+        </div>
+      </div>
+    </div>
 
-<form action="/conditions/<%= @condition.id %>/edit" method="GET">
-  <input type="hidden" name="_method" value="EDIT">
-  <input type="submit" value="edit"/>
-</form>
-<form action="/conditions/<%= @condition.id %>" method="POST">
-  <input type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="delete"/>
-</form>
+    <div class = "content">
+      <div class = "details">
+        <p><span>ID:</span> <%= @condition.id %></p>
+        <p><span>Temperature Range:</span> <%= @condition.min_temperature_f %>-<%= @condition.max_temperature_f %> Degrees</p>
+        <p><span>Mean Temperature:</span> <%= @condition.mean_temperature_f %> Degrees</p>
+        <p><span>Mean Humidity:</span> <%= @condition.mean_humidity %> %</p>
+        <p><span>Mean Visibility:</span> <%= @condition.mean_visibility_miles %> Miles</p>
+        <p><span>Mean Wind Speed:</span> <%= @condition.mean_wind_speed_mph %> MPH</p>
+        <p><span>Precipitation:</span> <%= @condition.precipitation_inches %> Inches</p>
+
+        <div class = "buttons">
+          <form action="/conditions/<%= @condition.id %>/edit" method="GET">
+            <input type="hidden" name="_method" value="EDIT">
+            <input type="submit" value="edit"/>
+          </form>
+
+          <form action="/conditions/<%= @condition.id %>" method="POST">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="delete"/>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
