--- a/app/public/show.css
+++ b/app/public/show.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/images/hi2.jpg');
+  background-image: url('/images/road.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
